--- a/FinalExamSystems/FinalExamSystems.csproj
+++ b/FinalExamSystems/FinalExamSystems.csproj
@@ -3,10 +3,11 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <NoWin32Manifest>true</NoWin32Manifest>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\vivip\source\repos\FinalExamSystems\FinalExamSystems\FinalExamSystems.xml</DocumentationFile>
+    <DocumentationFile>C:\Users\drf32\OneDrive\Documents\Conestoga\Sys Dev\finalExam\systemsFinalExam\FinalExamSystems\FinalExamSystems.xml</DocumentationFile>
     <OutputPath></OutputPath>
   </PropertyGroup>
 
